# deuscoin

./: .gitignore  .travis.yml  COPYING  Makefile.am  README.md  configure.ac
contrib/gitian-descriptors/: README.md  deps-linux.yml  deps-win.yml  gitian-linux.yml  gitian-osx-deuscoin.yml  gitian-win.yml  qt-win.yml
contrib/macdeploy/: DS_Store
contrib/spendfrom/: setup.py
doc/: README.md  building-deuscoin.md
doc/release-notes/: release-notes-0.9.0.md
qa/pull-tester/: build-tests.sh.in  pull-tester.py  pull-tester.sh  run-deuscoind-for-test.sh.in
qa/rpc-tests/: README.md  conflictedbalance.sh  getblocktemplate.py  getchaintips.py  keypool.py  listtransactions.py  receivedby.py  rpcbind_test.py  send.sh  smartfees.py  test_framework.py  txnmall.sh  util.py  util.sh  wallet.sh  walletbackup.sh  zapwallettxes.sh
qa/rpc-tests/python-deuscoinrpc/: setup.py
qa/rpc-tests/python-deuscoinrpc/deuscoinrpc/: authproxy.py
share/: setup.nsi.in  ui.rc
share/qt/: Info.plist.in  make_windows_icon.sh
share/seeds/: nodes_main.txt
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  base58.cpp  base58.h  bloom.cpp  bloom.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  core.cpp  core.h  core_io.h  core_read.cpp  core_write.cpp  crypter.cpp  crypter.h  db.cpp  db.h  deuscoin-cli-res.rc  deuscoin-cli.cpp  deuscoin-tx.cpp  deuscoind-res.rc  deuscoind.cpp  (+69 more)
src/compat/: glibc_compat.cpp  glibc_sanity.cpp  glibcxx_compat.cpp  glibcxx_sanity.cpp  sanity.h
src/crypto/: common.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha2.cpp  sha2.h
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/m4/: deuscoin_find_bdb48.m4  deuscoin_qt.m4
src/qt/: Makefile  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  deuscoin.cpp  deuscoin.qrc  deuscoin_locale.qrc  deuscoinaddressvalidator.cpp  deuscoinaddressvalidator.h  deuscoinamountfield.cpp  deuscoinamountfield.h  deuscoingui.cpp  deuscoingui.h  deuscoinstrings.cpp  deuscoinunits.cpp  deuscoinunits.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  monitoreddatamapper.cpp  monitoreddatamapper.h  (+63 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: deuscoin_ach.ts  deuscoin_af_ZA.ts  deuscoin_ar.ts  deuscoin_be_BY.ts  deuscoin_bg.ts  deuscoin_bs.ts  deuscoin_ca.ts  deuscoin_ca@valencia.ts  deuscoin_ca_ES.ts  deuscoin_cmn.ts  deuscoin_cs.ts  deuscoin_cy.ts  deuscoin_da.ts  deuscoin_de.ts  deuscoin_el_GR.ts  deuscoin_en.ts  deuscoin_eo.ts  deuscoin_es.ts  deuscoin_es_CL.ts  deuscoin_es_DO.ts  deuscoin_es_MX.ts  deuscoin_es_UY.ts  deuscoin_et.ts  deuscoin_eu_ES.ts  deuscoin_fa.ts  deuscoin_fa_IR.ts  deuscoin_fi.ts  deuscoin_fr.ts  deuscoin_fr_CA.ts  deuscoin_gl.ts  deuscoin_gu_IN.ts  deuscoin_he.ts  deuscoin_hi_IN.ts  deuscoin_hr.ts  deuscoin_hu.ts  deuscoin_id_ID.ts  deuscoin_it.ts  deuscoin_ja.ts  deuscoin_ka.ts  deuscoin_kk_KZ.ts  (+31 more)
src/qt/res/: deuscoin-qt-res.rc
src/qt/res/icons/: deuscoin.icns
src/qt/test/: Makefile  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/script/: compressor.cpp  compressor.h  interpreter.cpp  interpreter.h  script.cpp  script.h  sign.cpp  sign.h  standard.cpp  standard.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile  README.md  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bignum.h  bip32_tests.cpp  bloom_tests.cpp  canonical_tests.cpp  checkblock_tests.cpp  compress_tests.cpp  crypto_tests.cpp  deuscoin-util-test.py  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  main_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum_tests.cpp  serialize_tests.cpp  sighash_tests.cpp  sigopcount_tests.cpp  skiplist_tests.cpp  test_deuscoin.cpp  timedata_tests.cpp  transaction_tests.cpp  uint256_tests.cpp  (+2 more)
src/test/data/: README.md  deuscoin-util-test.json
tools/: README.md  change-client-name.sh  graphics.sh  production-release.sh  rename.sh  sed-replace.sh
tools/graphics/pixmaps/: deuscoin128.xpm  deuscoin16.xpm  deuscoin256.xpm  deuscoin32.xpm  deuscoin64.xpm
